# jelly-file-mngr

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml
src/jellyfiler/: __init__.py  ai_query.py  anilist.py  cache.py  cli.py  executor.py  guesser.py  interactive.py  junk.py  models.py  planner.py  scanner.py  tmdb.py
tests/: test_ai_query.py  test_anilist.py  test_cache.py  test_cache_mgmt.py  test_executor.py  test_guesser.py  test_in_place.py  test_interactive.py  test_junk.py  test_planner.py  test_scanner.py  test_subtitles.py
