[project]
name = "jelly-file-mngr"
version = "0.1.0"
description = "Organize media rips into a Jellyfin-compatible directory structure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "guessit>=3.8",
    "httpx>=0.27",
    "rich>=13",
    "typer>=0.12",
    "wordninja>=2.0.0",
]

[project.scripts]
jellyfiler = "jellyfiler.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jellyfiler"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests>=2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=jellyfiler --cov-report=term-missing --cov-fail-under=30"
